--- a/index.html
+++ b/index.html
@@ -234,6 +234,13 @@
                 </div>
               </div>
               <div class="row">
+                <i class="fas fa-phone"></i>
+                <div class="info address">
+                  <div class="head">Mobile</div>
+                  <div class="sub-title">+2347055848023 / +2348136873941</div>
+                </div>
+              </div>
+              <div class="row">
                 <i class="fas fa-envelope"></i>
                 <div class="info">
                   <div class="head">Email</div>
