--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
              
             </div>
             <p>
-              I've a passion for front end development and design. I aspire
+              I have a passion for front end development and design. I aspire
               toward a career that will allow me to channel my creativity
               through crafting beautiful software and engaging experiences.
             </p>
