--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <i class="fas fa-envelope"></i>
                 <div class="info">
                   <div class="head">Email</div>
-                  <div class="sub-title">Bayoibiyemi1@gmail.com</div>
+                  <div class="sub-title"><a href="mailto:bayoibiyemi1@gmail.com">Bayoibiyemi1@gmail.com</a></div>
                 </div>
               </div>
             </div>
