--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <div class="column right">
             <div class="text">Message</div>
 
-            <form action="mail.php" method="post">
+            <form action="https://formspree.io/f/{bayoibiyemi1@gmail.com}" method="post">
               <div class="fields">
                 <div class="field name">
                     <input type="text" placeholder="Name" required id="name">
