--- a/index.html
+++ b/index.html
@@ -252,13 +252,13 @@
           <div class="column right">
             <div class="text">Message</div>
 
-            <form action="https://formspree.io/f/{bayoibiyemi1@gmail.com}" method="post">
+            <form action="https://formspree.io/f/xeqpnbdq" method="post">
               <div class="fields">
                 <div class="field name">
-                    <input type="text" placeholder="Name" required id="name">
+                    <input type="text" placeholder="Name" required id="name" name="name">
                 </div>
                 <div class="field email">
-                    <input type="email" placeholder="Email Address" required id="email">
+                    <input type="email" placeholder="Email Address" required id="email" name="_replyto">
                 </div>
                
               </div>
@@ -269,7 +269,7 @@
                 <textarea id="" cols="30" rows="10" placeholder="Describe project..." required></textarea>
             </div>
             <div class="button">
-                <button type="submit">Send message</button>
+                <button type="submit" value="send">Send message</button>
             </div>
             </form>
           </div>
