--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
                
               </div>
               <div class="field">
-                <input type="text" placeholder="Subject" required>
+                <input type="text" placeholder="Subject" required name="subject">
             </div>
             <div class="field textarea">
-                <textarea id="" cols="30" rows="10" placeholder="Describe project..." required></textarea>
+                <textarea id="" cols="30" rows="10" placeholder="Describe project..." required name="message"></textarea>
             </div>
             <div class="button">
                 <button type="submit" value="send">Send message</button>
