--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <p>
               I have a passion for front end development and design. I aspire
               toward a career that will allow me to channel my creativity
-              through crafting beautiful software and engaging experiences.
+              through crafting beautiful designs and engaging experiences.
             </p>
-            <a href="#">Checkout my resume</a>
+            <a class="resume-link" href="resume.html">Checkout my resume</a>
           </div>
         </div>
       </div>
@@ -150,7 +150,7 @@
         <h2 class="title">My Skills</h2>
         <div class="skills-content">
           <p>
-            I've been doing web design and development for about a year now, and I'm
+            I have been designing and developing websites for more than a year now, and I'm
             always eager to learn more in this fast paced industry.
           </p>
           <h3>HERE ARE SOME TECHNOLOGIES I'VE WORKED WITH:</h3>
@@ -284,11 +284,11 @@
         </div>
         <div class="share">
           <p>share this on :</p>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#"><i class="fab fa-pinterest"></i></a>
+          <a href="#" class="twitter-btn"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="reddit-btn"><i class="fab fa-reddit-alien"></i></a>
+          <a href="#" class="facebook-btn"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="linkedin-btn"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#" class="pinterest-btn"><i class="fab fa-pinterest"></i></a>
         </div>
         
     </footer>
