--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <embed src="img/Resume-Adebayo-Ibiyemi (1).pdf" type="application/pdf" width="100%" height="1200px" >
+    <!-- <embed src="img/Resume-Adebayo-Ibiyemi (1).pdf" type="application/pdf" width="100%" height="1200px" > -->
+    
+    <object data="img/Resume-Adebayo-Ibiyemi (1).pdf" type="application/pdf" width="100%" height="900"></object>
 </body>
 </html>
