--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 >
               </h1>
               <div class="hide">
-                <a class="hire" href="#">Hire me</a>
+                <a class="hire" href="#contact">Hire me</a>
               </div>
             </div>
           </div>
