--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
           <div class="div column right">
             <div class="text">
-              I'm Adebayo and I'm <span class="typing-2"></span>
+              I'm Adebayo and I'm a <span class="typing-2"></span>
              
             </div>
             <p>
@@ -84,6 +84,9 @@
               through crafting beautiful designs and engaging experiences.
             </p>
             <a class="resume-link" href="resume.html">Checkout my resume</a>
+            <!-- <p>Your web browser doesn't have a PDF plugin.
+              Instead you can <a href="filename.pdf">click here to
+              download the PDF file.</a></p> -->
           </div>
         </div>
       </div>
