edit/added img & updated link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 class="title">About me</h2>
         <div class="about-content">
           <div class="column left">
-            <img src="img/IMG_1595_50.jpg" alt="" />
+            <img src="img/IMG_E78252.jpg" alt="" />
           </div>
 
           <div class="div column right">
@@ -83,7 +83,7 @@
               toward a career that will allow me to channel my creativity
               through crafting beautiful designs and engaging experiences.
             </p>
-            <a class="resume-link" href="resume.html">Checkout my resume</a>
+            <a class="resume-link" href="resume.html">Check out my resume</a>
             <!-- <p>Your web browser doesn't have a PDF plugin.
               Instead you can <a href="filename.pdf">click here to
               download the PDF file.</a></p> -->
@@ -175,7 +175,7 @@
             <p>A food website designed for multiple devices.</p>
           </div>
           <div class="work-box foodie-app">
-            <img src="img/170.png" alt="">
+            <img src="img/behance2.png" alt="">
             <h3>Design</h3>
             <h4>Mobile App Design</h4>
             <p>A food mobile app design and prototype.</p>
@@ -198,12 +198,19 @@
             <h4>landing Page</h4>
             <p>An homepage of a tutor website built with html, css and bootstrap.</p>
           </div>
+          <div class="work-box music">
+            <img src="img/music.png" alt="">
+            <h3>Design</h3>
+            <h4>Music App UI</h4> 
+            <p>A online streaming music app designed with Adobe XD.</p>
+          </div>
           <div class="work-box jumia">
             <img src="img/jumiagif.gif" alt="">
             <h3>Design</h3>
             <h4>E-commerce website</h4> 
             <p>A recreation of an e-commerce website designed with Adobe XD.</p>
           </div>
+     
         
         </div>
         <div class="show-more">Show more</div>
