--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 class="title">About me</h2>
         <div class="about-content">
           <div class="column left">
-            <img src="img/IMG_E78252.jpg" alt="" />
+            <img src="img/IMG_1595_50.jpg" alt="" />
           </div>
 
           <div class="div column right">
