--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               toward a career that will allow me to channel my creativity
               through crafting beautiful designs and engaging experiences.
             </p>
-            <a class="resume-link" href="resume.html">Check out my resume</a>
+            <!-- <a class="resume-link" href="resume.html">Check out my resume</a> -->
             <!-- <p>Your web browser doesn't have a PDF plugin.
               Instead you can <a href="filename.pdf">click here to
               download the PDF file.</a></p> -->
