--- a/index.html
+++ b/index.html
@@ -305,14 +305,14 @@
         <div>
           Created By <span>IbiyemiAdebayo </span>| <span class="far fa-copyright"></span>2020 All rights reserved.
         </div>
-        <div class="share">
+        <!-- <div class="share">
           <p>share this on :</p>
           <a href="#" class="twitter-btn"><i class="fab fa-twitter"></i></a>
           <a href="#" class="reddit-btn"><i class="fab fa-reddit-alien"></i></a>
           <a href="#" class="facebook-btn"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="linkedin-btn"><i class="fab fa-linkedin-in"></i></a>
           <a href="#" class="pinterest-btn"><i class="fab fa-pinterest"></i></a>
-        </div>
+        </div> -->
         
     </footer>
 
