--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           </div>
           <div class="work-box jumia">
             <img src="img/jumiagif.gif" alt="">
-            <h3>Design</h3>
+            <h3>Design & Development</h3>
             <h4>E-commerce website</h4> 
             <p>A recreation of Jumia website designed with Adobe XD and built with html, css and bootstrap.</p>
           </div>
