--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <p>A food website designed for multiple devices.</p>
           </div>
           <div class="work-box foodie-app">
-            <img src="img/behance2.png" alt="">
+            <img src="img/newfoodie.png" alt="">
             <h3>Design</h3>
             <h4>Mobile App Design</h4>
             <p>A food mobile app design and prototype.</p>
