--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <h2 class="title">My Skills</h2>
         <div class="skills-content">
           <p>
-            I have been designing and developing websites for more than a while now, and I'm
+            I have been designing and developing websites for a while now, and I'm
             always eager to learn more in this fast paced industry.
           </p>
           <h3>HERE ARE SOME TECHNOLOGIES I'VE WORKED WITH:</h3>
