--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
             <h4>E-commerce mobile app</h4>
             <p>An E-commerce mobile app dark theme concept.</p>
           </div>
+          <div class="work-box logistic">
+            <img src="img/delivery-3.jpg" alt="">
+            <h3>Design</h3>
+            <h4>logistic app</h4>
+            <p>A logistic web app for tracking deliveries.</p>
+          </div>
           <!-- <div class="work-box portfolio">
             <img src="img/portfolio.png" alt="">
               <h3>Development</h3>
