--- a/index.html
+++ b/index.html
@@ -203,12 +203,24 @@
             <h4>E-commerce mobile app</h4>
             <p>An E-commerce mobile app dark theme concept.</p>
           </div>
-          <div class="work-box logistic">
+          <div class="work-box switch">
+            <img src="img/switch.jpg" alt="">
+            <h3>Design</h3>
+            <h4>E-commerce mobile app</h4>
+            <p>A mobile marketplace that allows users to buy, sell and barter items with consumers, local merchants and businesses. </p>
+          </div>
+          <div class="work-box rwanda">
+            <img src="img/rwanda.jpg" alt="">
+            <h3>Design</h3>
+            <h4>Travel mobile app</h4>
+            <p>Rwandaful is a travel mobile app to explore beautiful places in Rwanda.</p>
+          </div>
+          <!-- <div class="work-box logistic">
             <img src="img/delivery-3.jpg" alt="">
             <h3>Design</h3>
             <h4>logistic app</h4>
             <p>A logistic web app for tracking deliveries.</p>
-          </div>
+          </div> -->
           <!-- <div class="work-box portfolio">
             <img src="img/portfolio.png" alt="">
               <h3>Development</h3>
