--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
              
             </div>
             <p>
-              I'm a design-minded, detail oriented UX/UX Designer and Front-end Developer passionate about combining beautiful code with beautiful design. I have experience designing and developing webpages, from simple landing pages, mobile/web UI  to progressive web applications and prototypes. I strive to create websites that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences.
-              I love learning new and better ways to create seamless user experiences with clean, efficient, and scalable code. I consider work an ongoing education, and I'm always looking for opportunities to work with those who are willing to share their knowledge as much as I want to learn. At the end of the day, my primary goal is to create something beautiful with people that bring out the best in me.
+              I'm a design-minded, detail oriented UX/UX Designer and Front-end Developer passionate about combining beautiful code with beautiful design. I have experience designing and developing webpages, from simple landing pages, mobile apps to progressive web applications and prototypes. I strive to create webpages that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences. I love learning new and better ways to create seamless user experiences with clean, efficient UI/UX designs with scalable code. I consider work an ongoing education, and I'm always looking for opportunities to work with those who are willing to share their knowledge as much as I want to learn. At the end of the day, my primary goal is to create something beautiful with people that bring out the best in me. 
             </p>
             <!-- <a class="resume-link" href="resume.html">Check out my resume</a> -->
             <!-- <p>Your web browser doesn't have a PDF plugin.
@@ -109,8 +108,8 @@
               <i class="fas fa-laptop"></i>
               <div class="text">Web Design</div>
               <p>
-                I create beautiful high-fidelity web and mobile UI designs and prototypes that people can
-                enjoy on all digital mediums.
+                I create beautiful high-fidelity web and mobile UI designs and prototypes that users can
+                enjoy on all digital platforms.
               </p>
             </div>
           </div>
@@ -129,8 +128,8 @@
               <i class="fas fa-paint-brush"></i>
               <div class="text">Digital Art</div>
               <p>
-                I use computer software to bring art, illustrations to life on
-                various web designs.
+                I use computer software to bring art, illustrations to life in
+                various web design projects.
               </p>
             </div>
           </div>
@@ -152,7 +151,7 @@
         <h2 class="title">My Skills</h2>
         <div class="skills-content">
           <p>
-            I have been designing and developing websites for a while now, and I'm
+            I have been designing and developing websites for more than two years now, and I'm
             always eager to learn more in this fast paced industry.
           </p>
           <h3>HERE ARE SOME TECHNOLOGIES I'VE WORKED WITH:</h3>
