--- a/index.html
+++ b/index.html
@@ -178,18 +178,6 @@
             <h4>Mobile App Design</h4>
             <p>A food mobile app design and prototype.</p>
           </div>
-          <div class="work-box lodge">
-            <img src="img/triophones.png" alt="">
-            <h3>Design</h3>
-            <h4>Lodging Mobile App</h4> 
-            <p>A mobile app for lodging guests.</p>
-          </div>
-          <div class="work-box music">
-            <img src="img/music.png" alt="">
-            <h3>Design</h3>
-            <h4>Music App UI</h4> 
-            <p>A online streaming music app designed with Adobe XD.</p>
-          </div>
           <div class="work-box art">
             <img src="img/Untitled-1nnm.jpg" alt="">
             <h3>Design</h3>
@@ -200,7 +188,7 @@
             <img src="img/ecommerce-1.jpg" alt="">
             <h3>Design</h3>
             <h4>E-commerce mobile app</h4>
-            <p>An E-commerce mobile app dark theme concept.</p>
+            <p>A B2C E-commerce mobile app(dark mode).</p>
           </div>
           <div class="work-box switch">
             <img src="img/switch.jpg" alt="">
@@ -213,6 +201,18 @@
             <h3>Design</h3>
             <h4>Travel mobile app</h4>
             <p>Rwandaful is a travel mobile app to explore beautiful places in Rwanda.</p>
+          </div>
+          <div class="work-box lodge">
+            <img src="img/triophones.png" alt="">
+            <h3>Design</h3>
+            <h4>Lodging Mobile App</h4> 
+            <p>A mobile app for lodging guests.</p>
+          </div>
+          <div class="work-box music">
+            <img src="img/music.png" alt="">
+            <h3>Design</h3>
+            <h4>Music App UI</h4> 
+            <p>A online streaming music app designed with Adobe XD.</p>
           </div>
           <!-- <div class="work-box logistic">
             <img src="img/delivery-3.jpg" alt="">
