--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
             <img src="img/triophones.png" alt="">
             <h3>Design</h3>
             <h4>Lodging Mobile App</h4> 
-            <p>A mobile app for lodging guests.</p>
+            <p>A mobile app for lodging guests in private homes and properties.</p>
           </div>
           <div class="work-box music">
             <img src="img/music.png" alt="">
             <h3>Design</h3>
             <h4>Music App UI</h4> 
-            <p>A online streaming music app designed with Adobe XD.</p>
+            <p>A online streaming music webapp.</p>
           </div>
           <!-- <div class="work-box logistic">
             <img src="img/delivery-3.jpg" alt="">
