--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             always eager to learn more in this fast paced industry.
           </p>
           <h3>HERE ARE SOME TECHNOLOGIES I'VE WORKED WITH:</h3>
-          <img class="tech" src="img/Group 1736.jpg" alt="" />
+          <img class="tech" src="img/Group 2909.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -283,7 +283,7 @@
                 <i class="fas fa-phone"></i>
                 <div class="info address">
                   <div class="head">Mobile</div>
-                  <div class="sub-title">+2347055848023 / +2348136873941</div>
+                  <div class="sub-title"><a href="tel:+2347055848023">+2347055848023</a>  <br>  <a href="tel:+2348136873941">+2348136873941</a></div>
                 </div>
               </div>
               <div class="row">
@@ -326,7 +326,7 @@
     <!-- footer section -->
     <footer>
         <div>
-          Created By <span>IbiyemiAdebayo </span>| <span class="far fa-copyright"></span>2020 All rights reserved.
+          Created By <span>IbiyemiAdebayo </span>| <span class="far fa-copyright"></span> 2021 All rights reserved.
         </div>
         <!-- <div class="share">
           <p>share this on :</p>
