--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#about" class="menu-btn">About</a></li>
           <li><a href="#services" class="menu-btn">Services</a></li>
           <li><a href="#skills" class="menu-btn">Experience</a></li>
-          <li><a href="#work" class="menu-btn">Work</a></li>
+          <li><a href="#work" class="menu-btn">Projects</a></li>
           <li><a href="#contact" class="menu-btn">Contact</a></li>
           <li><a style="background: crimson; padding: 7px 12px; border-radius: 3px;" href="#contact" class="menu-btn">Let's talk</a></li>
         </ul>
@@ -164,7 +164,7 @@
 
     <section class="work" id="work">
       <div class="max-width">
-        <h2 class="title">My Work</h2>
+        <h2 class="title">My Projects</h2>
         <div class="work-content">
           <div class="work-box foodie-web">
             <img src="img/160.png" alt="">
@@ -191,7 +191,7 @@
             <p>A B2C E-commerce mobile app(dark mode).</p>
           </div>
           <div class="work-box switch">
-            <img src="img/switch.jpg" alt="">
+            <img src="img/switch2.jpg" alt="">
             <h3>Design</h3>
             <h4>E-commerce mobile app</h4>
             <p>A mobile marketplace that allows users to buy, sell and barter items with consumers, local merchants and businesses. </p>
