--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
              
             </div>
             <p>
-              I'm a design-minded, detail oriented UX/UX Designer and Front-end Developer passionate about combining beautiful code with beautiful design. I have experience designing and developing webpages, from simple landing pages, mobile apps to progressive web applications and prototypes. I strive to create webpages that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences. I love learning new and better ways to create seamless user experiences with clean, efficient UI/UX designs with scalable code. I consider work an ongoing education, and I'm always looking for opportunities to work with those who are willing to share their knowledge as much as I want to learn. At the end of the day, my primary goal is to create something beautiful with people that bring out the best in me. 
+              I'm a design-minded, detail oriented UI/UX Designer and Front-end Developer passionate about combining beautiful code with beautiful designs. I have experience designing and developing webpages, from simple landing pages, mobile apps to progressive web applications and prototypes. I strive to create webpages that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences. I love learning new and better ways to create seamless user experiences with clean, efficient UI/UX designs with scalable code. I consider work an ongoing education, and I'm always looking for opportunities to work with those who are willing to share their knowledge as much as I want to learn. At the end of the day, my primary goal is to create something beautiful with people that bring out the best in me. 
             </p>
             <!-- <a class="resume-link" href="resume.html">Check out my resume</a> -->
             <!-- <p>Your web browser doesn't have a PDF plugin.
@@ -169,7 +169,7 @@
           <div class="work-box foodie-web">
             <img src="img/160.png" alt="">
             <h3>Design</h3>
-            <h4>Responsive Website design</h4>
+            <h4>Responsive Web design</h4>
             <p>A food website designed for multiple devices.</p>
           </div>
           <div class="work-box foodie-app">
@@ -195,6 +195,12 @@
             <h3>Design</h3>
             <h4>E-commerce mobile app</h4>
             <p>A mobile marketplace that allows users to buy, sell and barter items with consumers, local merchants and businesses. </p>
+          </div>
+          <div class="work-box switch-landing">
+            <img src="img/swutch-landing-img.jpg" alt="">
+            <h3>Design & Development</h3>
+            <h4>Landing Page</h4>
+            <p>A Responsive landing page website for a B2C e-commerce brand. </p>
           </div>
           <div class="work-box rwanda">
             <img src="img/rwanda.jpg" alt="">
