--- a/index.html
+++ b/index.html
@@ -208,11 +208,17 @@
             <h4>Travel mobile app</h4>
             <p>Rwandaful is a travel mobile app to explore beautiful places in Rwanda.</p>
           </div>
-          <div class="work-box lodge">
+          <!-- <div class="work-box lodge">
             <img src="img/triophones.png" alt="">
             <h3>Design</h3>
             <h4>Lodging Mobile App</h4> 
             <p>A mobile app for lodging guests in private homes and properties.</p>
+          </div> -->
+          <div class="work-box music">
+            <img src="img/gjustice.jpg" alt="">
+            <h3>Design</h3>
+            <h4>Legal Services App</h4> 
+            <p>An app that connects subscribers to enlisted licensed Legal Practitioners.</p>
           </div>
           <div class="work-box music">
             <img src="img/music.png" alt="">
@@ -220,6 +226,7 @@
             <h4>Music App UI</h4> 
             <p>A online streaming music webapp.</p>
           </div>
+        
           <!-- <div class="work-box logistic">
             <img src="img/delivery-3.jpg" alt="">
             <h3>Design</h3>
