--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <h4>Lodging Mobile App</h4> 
             <p>A mobile app for lodging guests in private homes and properties.</p>
           </div> -->
-          <div class="work-box music">
+          <div class="work-box gjustice">
             <img src="img/gjustice.jpg" alt="">
             <h3>Design</h3>
             <h4>Legal Services App</h4> 
