--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </h1>
               <h1 class="hide">
                 <span class="text-none"
-                  >And I'm a <span class="trade"></span>UI/UX Developer</span
+                  >And I'm a <span class="trade"></span>UI/UX Designer</span
                 >
               </h1>
               <div class="hide">
