--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <section class="services" id="services">
       <div class="max-width">
-        <h2 class="title">My Sevices</h2>
+        <h2 class="title">My Services</h2>
         <div class="serv-content">
           <!-- <div class="card">
                         <div class="box">
@@ -151,7 +151,7 @@
         <h2 class="title">My Skills</h2>
         <div class="skills-content">
           <p>
-            I have been designing and developing websites for more than a year now, and I'm
+            I have been designing webpages for about two years now, and I'm
             always eager to learn more in this fast paced industry.
           </p>
           <h3>HERE ARE SOME TECHNOLOGIES I'VE WORKED WITH:</h3>
@@ -166,18 +166,6 @@
       <div class="max-width">
         <h2 class="title">My Projects</h2>
         <div class="work-content">
-          <div class="work-box foodie-web">
-            <img src="img/160.png" alt="">
-            <h3>Design</h3>
-            <h4>Responsive Web design</h4>
-            <p>A food website designed for multiple devices.</p>
-          </div>
-          <div class="work-box foodie-app">
-            <img src="img/newfoodie.png" alt="">
-            <h3>Design</h3>
-            <h4>Mobile App Design</h4>
-            <p>A food mobile app design and prototype.</p>
-          </div>
           <div class="work-box art">
             <img src="img/Untitled-1nnm.jpg" alt="">
             <h3>Design</h3>
@@ -188,7 +176,7 @@
             <img src="img/ecommerce-1.jpg" alt="">
             <h3>Design</h3>
             <h4>E-commerce mobile app</h4>
-            <p>A B2C E-commerce mobile app(dark mode).</p>
+            <p>A B2C E-commerce mobile app(Dark theme).</p>
           </div>
           <div class="work-box switch">
             <img src="img/switch2.jpg" alt="">
@@ -219,6 +207,18 @@
             <h3>Design</h3>
             <h4>Legal Services App</h4> 
             <p>An app that connects subscribers to enlisted licensed Legal Practitioners.</p>
+          </div>
+          <div class="work-box foodie-web">
+            <img src="img/160.png" alt="">
+            <h3>Design</h3>
+            <h4>Responsive Web design</h4>
+            <p>A food website designed for various platforms.</p>
+          </div>
+          <div class="work-box foodie-app">
+            <img src="img/newfoodie.png" alt="">
+            <h3>Design</h3>
+            <h4>Mobile App Design</h4>
+            <p>A food mobile app design and prototype.</p>
           </div>
           <div class="work-box music">
             <img src="img/music.png" alt="">
