--- a/index.html
+++ b/index.html
@@ -214,18 +214,32 @@
             <h4>Legal Services App</h4> 
             <p>An app that connects subscribers to enlisted licensed Legal Practitioners.</p>
           </div>
-          <div class="work-box foodie-web">
+          <!-- <div class="work-box foodie-web">
             <img src="img/160.png" alt="">
             <h3>Design</h3>
             <h4>Responsive Web design</h4>
             <p>A food website designed for various platforms.</p>
-          </div>
+          </div> -->
         
           <div class="work-box music">
-            <img src="img/music.png" alt="">
+            <img src="img/Group 200.png" alt="">
             <h3>Design</h3>
             <h4>Music App UI</h4> 
             <p>A online streaming music webapp.</p>
+          </div>
+
+          <div class="work-box elite">
+            <img src="img/Group 152.png" alt="">
+            <h3>Design</h3>
+            <h4>Online Farming</h4> 
+            <p>A System admin ui interface to manage land and farms.</p>
+          </div>
+
+          <div class="work-box In-cash">
+            <img src="img/Frame 1.png" alt="">
+            <h3>Design</h3>
+            <h4>Incash Fintech landing Page</h4> 
+            <p>Incash provide loans and salary advance to employers and employees.</p>
           </div>
         
           <!-- <div class="work-box logistic">
