--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h3>
             I'm a user experience designer. I’ve helped companies,
             organizations, and start-ups build better digital products. I posses
-            great proficiency in using figma, Adobe XD and Photoshop
+            great proficiency in using figma, Adobe XD, Photoshop, HTML & CSS.
           </h3>
         </div>
       </div>
