--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <h1>PERSONAL</h1>
 
         <div class="boxes">
-          <div class="box">
+          <div class="box foodie">
             <div class="card">
               <img class="card-img" src="img/MacBook - 12.png" alt="" />
             </div>
