delete visual exp

--- a/index.html
+++ b/index.html
@@ -287,18 +287,16 @@
                         <div class="sm-box">
                             <img src="img/MacBook - 1.png" alt="" class="sm-box-img">
                         </div> -->
-          <div class="sm-box">
+          <!-- <div class="sm-box">
             <img src="img/MacBook - 220.png" alt="" class="sm-box-img" />
-          </div>
-          <div class="sm-box red-desktop">
+          </div> -->
+          <!-- <div class="sm-box red-desktop">
             <img src="img/iPhone XS - Silver.png" alt="" class="sm-box-img" />
           </div>
           <div class="sm-box">
             <img src="img/iPhone XS - Silver--.png" alt="" class="sm-box-img" />
           </div>
-          <div class="sm-box red-mobile">
-            <img src="img/iPhone XS - Silver.png" alt="" class="sm-box-img" />
-          </div>
+      
         </div>
         <!-- <div class="small-boxes">
                         <div class="sm-box">
