--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
           </div>
 
           
-          <div class="box trans">
-            <div class="card"><img class="card-img" src="img/MacBook - 20.png" alt=""></div>
-            <img class="box-title" src="img/dax-logo.svg" alt="">
+          <div class="box">
+            <div class="card"><img class="card-img" src="img/MacBook - 231.png" alt=""></div>
+            <img class="box-title sm-logo-2" src="img/tuc-logo.svg" alt="">
             <h3>
-                Fintech website
+                The Ultimate Collaboration
             </h3>
             <p>
-                Daxinks is an automated loan/credit scheme and investment platform available online.
+                An online community where ideas are turned into realities.
             </p>
         </div>
 
@@ -309,6 +309,7 @@
                             <img src="img/iPhone XS - red.png" alt="" class="sm-box-img">
                         </div>
                 </div> -->
+      </div>
       </div>
     </section>
 
