--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         </div>
         <div class="boxes">
-          <div class="box">
+          <div class="box rosabon">
             <div class="card">
               <img class="card-img" src="img/MacBook - 226.png" alt="" />
             </div>
@@ -232,7 +232,7 @@
         <div class="boxes">
           <div class="box music">
             <div class="card">
-              <img class="card-img" src="img/MacBook - 170.png" alt="" />
+              <img class="card-img" src="img/Cover Art.png" alt="" />
             </div>
             <!-- <h3>Title</h3> -->
             <h3>Music app ui</h3>
