--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </p>
           </div>
 
-          <div class="box">
+          <div class="box incash">
             <div class="card">
               <img class="card-img" src="img/MacBook - 3.png" alt="" />
             </div>
