--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="card"><img class="card-img" src="img/MacBook - 20.png" alt=""></div>
             <img class="box-title" src="img/dax-logo.svg" alt="">
             <h3>
-                Fintech website
+                Fintech webapp
             </h3>
             <p>
                 Daxinks is an automated loan/credit scheme and investment platform available online.
