--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
 
          
-          <div class="box">
+          <div class="box tuc">
             <div class="card"><img class="card-img" src="img/MacBook - 232.png" alt=""></div>
             <img class="box-title sm-logo-2" src="img/tuc-logo.svg" alt="">
             <h3>
