--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             <div class="card"><img class="card-img" src="img/MacBook - 232.png" alt=""></div>
             <img class="box-title sm-logo-2" src="img/tuc-logo.svg" alt="">
             <h3>
-                The Ultimate Collaboration
+                Online Collaboration Platform
             </h3>
             <p>
-                An online community where ideas are turned into realities.
+                An online community where people come together and collaborate to bring ideas to life.
             </p>
         </div>
 
