--- a/Rportfolio-details copy 3.html
+++ b/Rportfolio-details copy 3.html
@@ -55,9 +55,9 @@
                   <img src="assets/img/portfolio/r1.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/r3.png" alt="">
-                </div>
+                </div> -->
 <!-- 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/m3.jpg" alt="">
