--- a/Gportfolio-details copy.html
+++ b/Gportfolio-details copy.html
@@ -83,8 +83,8 @@
               A fitness app that can perform various functions such as allowing users to set fitness goals, tracking caloric intake, gathering workout ideas, and sharing progress on social media to facilitate healthy behavior change. They can be used as a platform to promote healthy behavior change with personalized workouts, fitness advice and nutrition plans. The app also provide gamification elements for creating healthy competition among friends and family, it serves as an incentive users to be more motivated.
             </p>
 
-            <div>
-              <a href="#https://hibee01.github.io/Tuc/">View Case Study</a>
+            <div onclick="gym()" class="gymbuddy">
+              <a href="">View Project</a>
             </div>
           </div>
 
