--- a/Rportfolio-details copy 3.html
+++ b/Rportfolio-details copy 3.html
@@ -85,8 +85,8 @@ rwanda, from destinations, events, things to do, people and cultures.
 National Park.
             </p>
 
-            <div>
-              <a href="#https://hibee01.github.io/Rwandaful/">View Case Study</a>
+            <div onclick="rwanda()">
+              <a href="">View Project</a>
             </div>
           </div>
 
