--- a/Tportfolio-details copy 2.html
+++ b/Tportfolio-details copy 2.html
@@ -82,8 +82,8 @@
               An open innovation platform that creates bridges for ideators, entrepreneurs to connect to investors, corporate partners, experts and other organizations they need to scale. It helps good ideas reach their full potential through collaborations.
             </p>
 
-            <div>
-              <a href="#https://hibee01.github.io/Tuc/">View Case Study</a>
+            <div onclick="tuc()">
+              <a href="">View Project</a>
             </div>
           </div>
 
@@ -94,13 +94,7 @@
 
   </main><!-- End #main -->
 
-  <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-  </div>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
