--- a/mportfolio-details.html
+++ b/mportfolio-details.html
@@ -82,8 +82,8 @@
               A music app where users can listen to their favorite songs, radio stations & albums  in lossless streaming audio quality with friends from all over the world for a cheap monthly subsciption fee. It helps improves the overall music experiences of the users
             </p>
 
-            <div>
-              <a href="#https://hibee01.github.io/music-app/">View Case Study</a>
+            <div onclick="musicz()">
+              <a href="">View Project</a>
             </div>
           </div>
 
