--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+            <img class="iconz" src="assets/img/portfolio/digitalartt.svg" alt="">
             <h3>Digital Art</h3>
           </div>
         </div>
@@ -694,6 +694,17 @@ exciting information about Rwanda
           </div>
         </div>
 
+        <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Art.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Art Exhibition Website</h4>
+              <div class="portfolio-links">
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
 
     </div>
@@ -780,7 +791,7 @@ exciting information about Rwanda
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Code by <a href="#https://bootstrapmade.com/">BootstrapMade</a>
+    Coded with <a href="#https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
