--- a/Gportfolio-details copy.html
+++ b/Gportfolio-details copy.html
@@ -84,7 +84,7 @@
             </p>
 
             <div onclick="gym()" class="gymbuddy">
-              <a href="">View Project</a>
+              <a href="">Test this app</a>
             </div>
           </div>
 
