--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@ exciting information about Rwanda
 
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/crypto banner.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/crypto banner1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Crypto Mobile App</h4>
               <div class="portfolio-links">
