--- a/crypto.html
+++ b/crypto.html
@@ -55,6 +55,10 @@
                   <img src="assets/img/portfolio/crypto content.png" alt="">
                 </div>
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/crypto content white.png" alt="">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
