--- a/crypto.html
+++ b/crypto.html
@@ -54,10 +54,28 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/crypto content.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/crypto content white.png" alt="">
                 </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/crypto content2.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/crypto content2 white.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/crypto content3.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/crypto content3 white.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/crypto content4.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/crypto content4 white.png" alt="">
+                </div>
+             
 
               </div>
               <div class="swiper-pagination"></div>
