--- a/Gportfolio-details copy.html
+++ b/Gportfolio-details copy.html
@@ -52,6 +52,9 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/gs0.png" alt="">
+                </div>
+                <div class="swiper-slide">
                   <img src="assets/img/portfolio/gs1.png" alt="">
                 </div>
                 <div class="swiper-slide">
@@ -71,6 +74,12 @@
                 </div>
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/gs7.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/gs8.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/gs9.png" alt="">
                 </div>
 
               
