--- a/mportfolio-details.html
+++ b/mportfolio-details.html
@@ -63,6 +63,10 @@
                   <img src="assets/img/portfolio/m3.png" alt="">
                 </div>
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/m4.png" alt="">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
