--- a/Tportfolio-details copy 2.html
+++ b/Tportfolio-details copy 2.html
@@ -61,8 +61,18 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/tuc0.png" alt="">
+                  <img src="assets/img/portfolio/tuc3.png" alt="">
                 </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tuc4.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tuc5.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tuc7.png" alt="">
+                </div>
+              
 
                 
 
